--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dk.callan</groupId>
-    <artifactId>ActivtyAPI</artifactId>
+    <artifactId>ActivityAPI</artifactId>
     <version>1.0.1</version>
     <packaging>war</packaging>
 
-    <name>ActivtyAPI</name>
+    <name>ActivityAPI</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
